[tool.poetry]
name = "smartis_sdk"
version = "0.6.0"
description = "SDK для Smartis API"
license = "MIT"
authors = ["viktor <vi.dave@yandex.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2"
pydantic = ">=2.0a1"
pandas = "^2"

[tool.poetry.dev-dependencies]
coverage = "^7"
pytest = "^7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "UP", "ANN", "B"]
ignore = ["E501", "ANN204", "ANN101"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10